--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1,14 +1,15 @@
 .container {
-  width: 600px;
+  width: 960px;
   margin: 25px auto;
 }
 
-ul li span {
+.button {
   color: white;
-  background-color: red;
+  background-color: grey;
   margin-left: 25px;
   border-radius: 5px;
   padding: 5px;
   font-size: 0.4em;
   cursor: pointer;
 }
+
