--- a/app/css/main.css
+++ b/app/css/main.css
@@ -7,6 +7,6 @@
   background-color: grey;
   margin-left: 25px;
   border-radius: 5px;
-  padding: 5px;
-  font-size: 0.4em;
+  padding: 6px 10px;
+  font-size: 0.75em;
   cursor: pointer; }
